# workload-ref-archs

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  test-requirements.txt  tox.ini  workload-template.rst
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/big-data/: big-data.rst
doc/source/big-data/sample/heat/: BigData.yaml  README.rst
doc/source/financial/: open-source-maturity-analysis-json.docx  open-source-maturity-analysis-messageq.docx
doc/source/web-applications/sample/heat/: WebAppStatic.yaml
doc/source/web-applications/sample/heat/nested/: heat_sql_tier.yaml  heat_web_tier.yaml  setup_net_sg.yaml
releasenotes/source/: conf.py  index.rst
workload-ref-archs/: __init__.py  workload-template.rst
workload-ref-archs/ecommerce/sample/heat/: README.rst  eCommerceAutoScaling.yaml  eCommerceStatic.yaml
workload-ref-archs/ecommerce/sample/heat/nested/: launch_services_layer.yaml  launch_sql_layer.yaml  launch_web_layer.yaml  setup_network.yaml
workload-ref-archs/tests/: test_workload-ref-archs.py
workload-ref-archs/web-applications/: web-applications.rst
workload-ref-archs/web-applications/sample/heat/: README.rst  WebAppAutoScaling.yaml  WebAppStatic.yaml
workload-ref-archs/web-applications/sample/heat/nested/: heat_app_tier.yaml  heat_sql_tier.yaml  heat_web_tier.yaml  setup_net_sg.yaml
