[metadata]
name = workload-ref-archs
summary = OpenStack Enterprise WG workload reference architectures.
description-file =
    README.rst
author = OpenStack Enterprise Working Group
author-email = user-committee@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    workload-ref-archs

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = workload-ref-archs/locale
domain = workload-ref-archs

[update_catalog]
domain = workload-ref-archs
output_dir = workload-ref-archs/locale
input_file = workload-ref-archs/locale/workload-ref-archs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = workload-ref-archs/locale/workload-ref-archs.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
